Fixed overflowing text pt 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2270,6 +2270,7 @@ code {
 	ol.default {
 		list-style: decimal;
 		padding-left: 1.25em;
+		overflow: auto;
 	}
 
 		ol.default li {
